--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "element-ui": "^2.15.14",
+    "normalize.css": "^8.0.1",
+    "vue": "^2.6.14",
+    "vue-router": "3.6.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -19,6 +23,8 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.86.3",
+    "sass-loader": "10",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
